<resources>
    <string name="app_name">Inventory App</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="inventory">Inventory</string>
    <string name="quantity">Quantity</string>
    <string name="inventory_list">Inventory List</string>
    <string name="add_item">Add Item</string>
    <string name="delete_row">Delete row</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="item">Item</string>
    <string name="_0">0</string>
    <string name="zac">Zac</string>
    <string name="_01">01</string>
    <string name="edit_quantity">edit quantity</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="x">X</string>
</resources>