<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">


        <TextView
            android:id="@+id/item_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/item"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/quantity_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="number"
            android:text="0" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:background="@drawable/button_look"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonX"
            android:layout_width="0dp"
            android:background="@drawable/button_look"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/x" />

    </LinearLayout>

</RelativeLayout>